Apply suggestions from code review
Co-authored-by: Trevor Scheer <trevor.scheer@gmail.com>

--- a/src/content/studio/metrics/operation-signatures.mdx
+++ b/src/content/studio/metrics/operation-signatures.mdx
@@ -49,7 +49,7 @@ Helpfully, Apollo libraries use a [signature algorithm](#signature-algorithm) to
 
 > ⚠️ **This algorithm is subject to change.** This article describes the signature algorithm as of the release of Apollo Server 3.6.1. It is provided here for informational purposes, not as a canonical specification.
 
-Feel free to [jump to an example](#example-signature) or [view the source](https://github.com/apollographql/apollo-server/blob/main/packages/server/src/plugin/usageReporting).
+Feel free to [jump to an example](#example-signature) or [view the source](https://github.com/apollographql/apollo-utils/blob/main/packages/usageReporting/src/signature.ts).
 
 The signature algorithm performs the following modifications on an operation to generate its signature:
 
