Remove top level awaits and fix prettier

--- a/src/content/studio/explorer/additional-features.mdx
+++ b/src/content/studio/explorer/additional-features.mdx
@@ -41,7 +41,7 @@ query {
 #### Extracted variable
 
 ```graphql title="query.graphql"
-query ($id: ID!) {
+query($id: ID!) {
   user(id: $id) {
     name
   }
@@ -68,7 +68,12 @@ You can pause introspection polling at any time. To do so, open the Explorer Set
 
 If you're working with a supergraph in Studio, the Explorer dynamically calculates example query plans for your operations in the right-hand panel (click **Response** and select **Query Plan Preview** from the dropdown):
 
-<img className="screenshot" src="../img/explorer-query-plan.jpg" alt="Query plan in the Explorer" width="300" />
+<img
+  className="screenshot"
+  src="../img/explorer-query-plan.jpg"
+  alt="Query plan in the Explorer"
+  width="300"
+/>
 
 > If you don't see the **Query Plan Preview** option, make sure you're using the full version of the Explorer, _not_ Apollo Sandbox. Also make sure you're using the Explorer with a supergraph.
 
@@ -78,7 +83,12 @@ As you edit an operation, the Explorer recalculates its example query plan accor
 
 There are two display modes for query plans. You can switch between **Show plan as text** and **Show plan as chart** by clicking the icons next to **Query Plan Preview**:
 
-<img className="screenshot" src="../img/explorer-query-plan-diagram.jpg" alt="Query plan diagram in the Explorer" width="600" />
+<img
+  className="screenshot"
+  src="../img/explorer-query-plan-diagram.jpg"
+  alt="Query plan diagram in the Explorer"
+  width="600"
+/>
 
 ## Subscription support
 
@@ -94,11 +104,21 @@ The Explorer supports the following libraries/protocols for sending subscription
 
 To execute a subscription operation, first specify your subscriptions endpoint and implementation in the Explorer's connection settings:
 
-<img className="screenshot" src="../img/explorer-subscriptions-settings.jpg" alt="Subscription settings in the Explorer" width="500" />
+<img
+  className="screenshot"
+  src="../img/explorer-subscriptions-settings.jpg"
+  alt="Subscription settings in the Explorer"
+  width="500"
+/>
 
 When you execute a subscription, a Subscriptions panel appears in the bottom-right of the Response panel:
 
-<img className="screenshot" src="../img/explorer-subscriptions-panel.jpg" alt="Subscriptions panel in the Explorer" width="500" />
+<img
+  className="screenshot"
+  src="../img/explorer-subscriptions-panel.jpg"
+  alt="Subscriptions panel in the Explorer"
+  width="500"
+/>
 
 The dot next to `STATUS` indicates whether the Explorer is connected to your WebSocket endpoint (green if connected, red if disconnected). As long as you're connected _and_ listening for updates, any such updates appear in the panel as they're received.
 
@@ -140,7 +160,7 @@ import { ApolloServerPluginInlineTrace } from '@apollo/server/plugin/inlineTrace
 const server = new ApolloServer({
   typeDefs,
   resolvers,
-  plugins: [ApolloServerPluginInlineTrace()],
+  plugins: [ApolloServerPluginInlineTrace()]
 });
 ```
 
@@ -174,7 +194,8 @@ You can specify default headers that are applied to _every_ Explorer request exe
 
 As an alternative to [response hints](#response-hints), the Explorer can show you hints for the latency of the fields in your query. This option is available only if you've configured your graph to [report field usage and tracing data to Studio](../metrics/usage-reporting/).
 
-The Explorer shows you the 95th-percentile (default) response times for the fields in your query to help you get a sense of how "expensive" your query is and what the bottlenecks in response time will be. You can change which percentile you want to see hints from at any time in the Explorer settings.
+The Explorer shows you the 95th-percentile (default) response times for the fields in your query to help you get a sense of how "expensive" your query is and what the bottlenecks in response time will be.
+You can change which percentile you want to see hints from at any time in the Explorer settings.
 
 ### `graphql-lodash` integration
 
