--- a/src/content/studio/explorer/embed-explorer.mdx
+++ b/src/content/studio/explorer/embed-explorer.mdx
@@ -9,25 +9,27 @@ For example, here's an embedded Explorer for an Apollo example graph. Try it out
 <EmbeddableExplorer />
 
 ## Embedding on the Apollo Server landing page
-
 In Apollo Server [v3.8.0](https://github.com/apollographql/apollo-server/blob/main/CHANGELOG.md#v380) and later, you can use a built-in plugin to embed the Explorer directly on your server's landing page.
 
 You use the `ApolloServerPluginLandingPageLocalDefault` plugin to configure the landing page in your local development environment, and you use `ApolloServerPluginLandingPageProductionDefault` for production environments:
 
 ```js
-import { ApolloServerPluginLandingPageLocalDefault, ApolloServerPluginLandingPageProductionDefault } from '@apollo/server/plugin/landingPage/default';
+import {
+  ApolloServerPluginLandingPageLocalDefault,
+  ApolloServerPluginLandingPageProductionDefault 
+} from '@apollo/server/plugin/landingPage/default';
 
 let plugins = [];
 if (process.env.NODE_ENV === 'production') {
-  plugins = [ApolloServerPluginLandingPageProductionDefault({ embed: true, graphRef: 'myGraph@prod' })];
+  plugins = [ApolloServerPluginLandingPageProductionDefault({ embed: true, graphRef: 'myGraph@prod' })]
 } else {
-  plugins = [ApolloServerPluginLandingPageLocalDefault({ embed: true })];
+  plugins = [ApolloServerPluginLandingPageLocalDefault({ embed: true })]
 }
 
 const server = new ApolloServer({
   typeDefs,
   resolvers,
-  plugins,
+  plugins
 });
 ```
 
@@ -45,15 +47,20 @@ For more information, see the [landing page plugin API reference](/apollo-server
 
    The following dialog appears:
 
-   <img class="screenshot" src="../img/embed-explorer-modal.jpg" alt="Explorer embed dialog" width="600" />
+   <img
+     class="screenshot"
+     src="../img/embed-explorer-modal.jpg"
+     alt="Explorer embed dialog"
+     width="600"
+   />
 
 4. Use the options on the left side of the dialog to customize the embedded Explorer's appearance and behavior to your liking.
 
 5. Still in the dialog, use the tabs above the code snippet to select the snippet for your use case:
 
-   - Use **React** for React apps where you can `npm install` the `@apollo/explorer` package.
-   - Use **JavaScript** for non-React JavaScript apps where you can `npm install` the `@apollo/explorer` package.
-   - Use **Built file on CDN** to use Apollo's CDN-hosted embedded Explorer.
+    - Use **React** for React apps where you can `npm install` the `@apollo/explorer` package.
+    - Use **JavaScript** for non-React JavaScript apps where you can `npm install` the `@apollo/explorer` package.
+    - Use **Built file on CDN** to use Apollo's CDN-hosted embedded Explorer.
 
 6. Click **Copy** to copy the snippet, then paste it into your code.
 
@@ -73,13 +80,23 @@ To prepopulate a default operation, use one of the following methods:
 
 Open the **•••** menu next to an operation and click **Embed this operation**:
 
-<img class="screenshot" src="../img/explorer-embed-definition-menu.jpg" alt="Explorer embed link" width="300" />
+<img
+  class="screenshot"
+  src="../img/explorer-embed-definition-menu.jpg"
+  alt="Explorer embed link"
+  width="300"
+/>
 
 #### Option 2
 
 Open the share dropdown in the Explorer and select **Share as embed**:
 
-<img class="screenshot" src="../img/explorer-embed-share-dropdown.jpg" alt="Explorer embed dropdown" width="300" />
+<img
+  class="screenshot"
+  src="../img/explorer-embed-share-dropdown.jpg"
+  alt="Explorer embed dropdown"
+  width="300"
+/>
 
 ### Authorization
 
@@ -87,9 +104,15 @@ Open the share dropdown in the Explorer and select **Share as embed**:
 
 **If you're embedding a private variant,** the embedded Explorer first asks users to authenticate by signing in to Studio. Authenticated users are then asked to authorize their Studio account to be used on the embedding webpage:
 
-<img class="screenshot" src="../img/embed-authorize.jpg" alt="Explorer authorization screen" width="400" />
+<img
+  class="screenshot"
+  src="../img/embed-authorize.jpg"
+  alt="Explorer authorization screen"
+  width="400"
+/>
 
 After authorizing, users can access the embedded Explorer, which includes schema navigation and visible operation collections.
+
 
 ## Options
 
@@ -185,7 +208,10 @@ The endpoint URL of the variant you want to use the embedded Explorer with. This
 
 ##### `autoInviteOptions`
 
-`{ accountId: string; inviteToken: string; }`
+`{
+    accountId: string;
+    inviteToken: string;
+ }`
 
 </td>
 <td>
@@ -250,7 +276,6 @@ You can set `includeCookies` to `true` if you instead want the Explorer to pass 
 If you pass the `handleRequest` option, this option is ignored.
 
 Read more about the `fetch` API and credentials [here](https://developer.mozilla.org/en-US/docs/Web/API/fetch#credentials).
-
 </td>
 </tr>
 
