--- a/src/content/technotes/TN0006-unmanaged-federation.mdx
+++ b/src/content/technotes/TN0006-unmanaged-federation.mdx
@@ -74,40 +74,37 @@ import { readFile } from 'fs/promises';
 import chokidar from 'chokidar';
 import supergraphSdlLocation = '/etc/config/supergraph.graphql';
 
-async function startApolloGateway() {
-  const gateway = new ApolloGateway({
-    async supergraphSdl({ update, healthCheck }) {
-      const watcher = chokidar.watch(supergraphSdlLocation);
-      watcher.on('change', async ()=>{
-        try {
-            const updatedSupergraph = await readFile(supergraphSdlLocation, 'utf-8');
-            // optional health check update to ensure our services are responsive
-            await healthCheck(updatedSupergraph);
-            // update the supergraph schema
-            update(updatedSupergraph);
-          } catch (e) {
-            // handle errors that occur during health check or while updating the supergraph schema
-            console.error(e);
-          }
-      });
-      return {
-        supergraphSdl: await readFile(supergraphSdlLocation, 'utf-8'),
-        async cleanup() {
-          await watcher.close();
+const gateway = new ApolloGateway({
+  async supergraphSdl({ update, healthCheck }) {
+    const watcher = chokidar.watch(supergraphSdlLocation);
+    watcher.on('change', async () => {
+      try {
+          const updatedSupergraph = await readFile(supergraphSdlLocation, 'utf-8');
+          // optional health check update to ensure our services are responsive
+          await healthCheck(updatedSupergraph);
+          // update the supergraph schema
+          update(updatedSupergraph);
+        } catch (e) {
+          // handle errors that occur during health check or while updating the supergraph schema
+          console.error(e);
         }
-      };
-    }
-  });
+    });
+    return {
+      supergraphSdl: await readFile(supergraphSdlLocation, 'utf-8'),
+      async cleanup() {
+        await watcher.close();
+      }
+    };
+  }
+});
 
-  const server = new ApolloServer({
-    gateway,
-  });
+const server = new ApolloServer({
+  gateway,
+});
 
-  const { url } = await startStandaloneServer(server);
-  console.log(`🚀  Server ready at ${url}`);
-}
-
-await startApolloGateway();
+// Note the top-level await!
+const { url } = await startStandaloneServer(server);
+console.log(`🚀  Server ready at ${url}`);
 ```
 
 In the code above, the `ApolloGateway` is passed a `supergaphSdl` property. This property can be a string (for a supergraph schema that _never_ changes during runtime), or it can be a function that enables updating the schema during runtime as shown.
